--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html body {
-  background-image: url("assets/fundo.jpg");
+  background-image: url("assets/fornopizza.jpeg");
   opacity: 0.95;
   background-attachment: fixed;
   background-size: cover;
